force-app/main/default/objects/Stripe_Credentials__c/Stripe_Credentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores Stripe connector settings: environment, publishable keys, named-credential names, webhook signing secrets (rotation-aware), enabled checkout modes, URLs and notification toggles. Protected for AppExchange. The Stripe SECRET key is NEVER stored here - it lives only in the Named Credential.</description>
    <label>Stripe Credentials</label>
</CustomObject>