force-app/main/default/objects/Stripe_Credentials__c/fields/Api_Timeout__c.field-meta.xml
<CustomField>
    <fullName>Api_Timeout__c</fullName>
    <label>API Timeout (ms)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>