force-app/main/default/objects/Stripe_Credentials__c/fields/Auth_Mode__c.field-meta.xml
<CustomField>
    <fullName>Auth_Mode__c</fullName>
    <label>Authentication Mode</label>
    <length>40</length>
    <type>Text</type>
</CustomField>