force-app/main/default/objects/Stripe_Credentials__c/fields/Cancel_Url__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Url__c</fullName>
    <label>Cancel Url</label>
    <type>Url</type>
</CustomField>