force-app/main/default/objects/Stripe_Credentials__c/fields/Custom_Element_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Custom_Element_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Payment Element (Custom) Enabled</label>
    <type>Checkbox</type>
</CustomField>