force-app/main/default/objects/Stripe_Credentials__c/fields/Custom_Logo_Url__c.field-meta.xml
<CustomField>
    <fullName>Custom_Logo_Url__c</fullName>
    <label>Custom Logo Url</label>
    <type>Url</type>
</CustomField>