force-app/main/default/objects/Stripe_Credentials__c/fields/Customer_Portal_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Portal Enabled</label>
    <type>Checkbox</type>
</CustomField>