force-app/main/default/objects/Stripe_Credentials__c/fields/Default_Currency__c.field-meta.xml
<CustomField>
    <fullName>Default_Currency__c</fullName>
    <label>Default Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>