force-app/main/default/objects/Stripe_Credentials__c/fields/Default_Product_Info__c.field-meta.xml
<CustomField>
    <fullName>Default_Product_Info__c</fullName>
    <label>Default Product Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>