force-app/main/default/objects/Stripe_Credentials__c/fields/Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Email_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notifications</label>
    <type>Checkbox</type>
</CustomField>