force-app/main/default/objects/Stripe_Credentials__c/fields/Embedded_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Embedded_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Embedded Checkout Enabled</label>
    <type>Checkbox</type>
</CustomField>