force-app/main/default/objects/Stripe_Credentials__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment (test/live)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>