force-app/main/default/objects/Stripe_Credentials__c/fields/Hosted_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Hosted_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Hosted Checkout Enabled</label>
    <type>Checkbox</type>
</CustomField>