force-app/main/default/objects/Stripe_Credentials__c/fields/Hosted_Redirect__c.field-meta.xml
<CustomField>
    <fullName>Hosted_Redirect__c</fullName>
    <label>Hosted Redirect Behaviour</label>
    <length>20</length>
    <type>Text</type>
</CustomField>