force-app/main/default/objects/Stripe_Credentials__c/fields/InApp_Notifications__c.field-meta.xml
<CustomField>
    <fullName>InApp_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In-App Notifications</label>
    <type>Checkbox</type>
</CustomField>