force-app/main/default/objects/Stripe_Credentials__c/fields/Link_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Link_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Payment Links Enabled</label>
    <type>Checkbox</type>
</CustomField>