force-app/main/default/objects/Stripe_Credentials__c/fields/Named_Credential_Live__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Live__c</fullName>
    <label>Named Credential (Live)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>