force-app/main/default/objects/Stripe_Credentials__c/fields/Publishable_Key_Test__c.field-meta.xml
<CustomField>
    <fullName>Publishable_Key_Test__c</fullName>
    <label>Publishable Key (Test)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>