force-app/main/default/objects/Stripe_Credentials__c/fields/Return_Url__c.field-meta.xml
<CustomField>
    <fullName>Return_Url__c</fullName>
    <label>Return Url</label>
    <type>Url</type>
</CustomField>