force-app/main/default/objects/Stripe_Credentials__c/fields/Secret_Key_Live__c.field-meta.xml
<CustomField>
    <fullName>Secret_Key_Live__c</fullName>
    <label>Secret Key (Live)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>