force-app/main/default/objects/Stripe_Credentials__c/fields/SMS_Notifications__c.field-meta.xml
<CustomField>
    <fullName>SMS_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Notifications</label>
    <type>Checkbox</type>
</CustomField>