force-app/main/default/objects/Stripe_Credentials__c/fields/Stripe_Api_Version__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Api_Version__c</fullName>
    <label>Stripe API Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>