force-app/main/default/objects/Stripe_Credentials__c/fields/Success_Url__c.field-meta.xml
<CustomField>
    <fullName>Success_Url__c</fullName>
    <label>Success Url</label>
    <type>Url</type>
</CustomField>