force-app/main/default/objects/Stripe_Credentials__c/fields/Webhook_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Base_Url__c</fullName>
    <label>Webhook Base URL (public Site)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>