force-app/main/default/objects/Stripe_Credentials__c/fields/Webhook_Signing_Secret_Live__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Signing_Secret_Live__c</fullName>
    <label>Webhook Signing Secret (Live)</label>
    <type>TextArea</type>
</CustomField>