force-app/main/default/objects/Stripe_Credentials__c/fields/Webhook_Signing_Secret_Test__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Signing_Secret_Test__c</fullName>
    <label>Webhook Signing Secret (Test)</label>
    <type>TextArea</type>
</CustomField>