force-app/main/default/objects/Stripe_Credentials__c/fields/WhatsApp_Notifications__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WhatsApp Notifications</label>
    <type>Checkbox</type>
</CustomField>